# chirpstack-telemetry

./: .gitignore  LICENSE  README.md  docker-compose.yml
configuration/grafana/: grafana.ini
configuration/grafana/dashboards/: example.json
configuration/grafana/provisioning/dashboards/: local.yml
configuration/grafana/provisioning/datasources/: influxdb.yml
configuration/telemetry-ingester/: config.toml
telemetry-ingester/: .dockerignore  Dockerfile  README.md  config.toml  requirements.txt  start.py
telemetry-ingester/lorawan-decoder/: Cargo.toml  pyproject.toml
telemetry-ingester/lorawan-decoder/src/: lib.rs
telemetry-ingester/src/: async_mqtt_client.py  config.py  formatting.py  grpc_stream_reader.py  influxdb_writer.py  logger.py  logs_formatter.py  mqtt_discovery_service.py  redis_reader.py
